# meta-ads-mcp

./: CHAT_IMPLEMENTATION.md  EXTERNAL_DEPENDENCIES.md  MCP_INTEGRATION_ANALYSIS.md  MCP_INTEGRATION_SUMMARY.md  META_INTEGRATION.md  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/auth/: routes.py
backend/app/api/chat/: routes.py
backend/app/api/meta/: routes.py
backend/app/core/: config.py  supabase.py
backend/app/models/: chat.py  user.py
backend/app/services/: auth.py  meta_ads_integration.py  meta_integration.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/auth/: login-form.tsx  meta-login.tsx  register-form.tsx
frontend/src/components/chat/: chart-renderer.tsx  chat-interface.tsx  enhanced-chat-interface.tsx
frontend/src/components/dashboard/: campaign-manager.tsx  dashboard-overview.tsx  realtime-monitor.tsx  strategy-manager.tsx
frontend/src/components/ui/: input.tsx
frontend/src/lib/: chat-commands.ts  config.ts  mcp-client.ts  meta-auth.ts  meta-realtime.ts  pipeboard.ts  session-manager.ts  supabase.ts  utils.ts
frontend/src/types/: user.ts
